--- a/src/html/index.html
+++ b/src/html/index.html
@@ -265,7 +265,7 @@
         })
     })
 </script>
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ggHoQp69862F5jvGwbiYEGdM"></script>
+<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=ggHoQp69862F5jvGwbiYEGdM"></script>
 <script src="../js/gfxqyMap.js"></script>
 <script src="../js/echarts-all-3.js"></script>
 <script src="../js/echarts-engine.js"></script>
