--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>公安</title>
+    <title>数据</title>
     <link rel="stylesheet" type="text/css" href="../css/public.css">
     <link rel="stylesheet" type="text/css" href="../css/mycharts.css">
     <link rel="stylesheet" type="text/css" href="../css/jquery.datetimepicker.css">       
